// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TextField /> should render with error 1`] = `
.c0 .sc-eCssSg {
  margin-right: 1.6rem;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c0 .c1,
.c0 .sc-eCssSg {
  color: #FF6347;
}

.c0 .c3 {
  border-color: #FF6347;
}

.c4 {
  background: #EAEAEA;
  border-radius: 0.4rem;
  border: 0.2rem solid #EAEAEA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1.6rem;
}

.c4:focus-within {
  box-shadow: 0 0 0.5rem #F231A5;
}

.c5 {
  background: transparent;
  border: 0;
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  outline: none;
  padding: 0.8rem 0;
  width: 100%;
}

.c2 {
  color: #030517;
  cursor: pointer;
  font-size: 1.4rem;
}

.c6 {
  color: #FF6347;
  font-size: 1.2rem;
}

<div
  class="c0"
>
  <label
    class="c1 c2"
    for="field"
  >
    Text Field
  </label>
  <div
    class="c3 c4"
  >
    <input
      class="c5"
      id="field"
      name="field"
      type="text"
      value=""
    />
  </div>
  <p
    class="c6"
  >
    Error
  </p>
</div>
`;

exports[`<TextField /> should render with label 1`] = `
.c0 .sc-eCssSg {
  margin-right: 1.6rem;
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
}

.c2 {
  background: #EAEAEA;
  border-radius: 0.4rem;
  border: 0.2rem solid #EAEAEA;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding: 0 1.6rem;
}

.c2:focus-within {
  box-shadow: 0 0 0.5rem #F231A5;
}

.c3 {
  background: transparent;
  border: 0;
  color: #030517;
  font-family: Poppins,-apple-system,BlinkMacSystemFont,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,'Open Sans','Helvetica Neue',sans-serif;
  font-size: 1.6rem;
  outline: none;
  padding: 0.8rem 0;
  width: 100%;
}

.c1 {
  color: #030517;
  cursor: pointer;
  font-size: 1.4rem;
}

<div
  class="c0"
>
  <label
    class="c1"
    for="field"
  >
    Label
  </label>
  <div
    class="c2"
  >
    <input
      class="c3"
      id="field"
      name="field"
      type="text"
      value=""
    />
  </div>
</div>
`;
